docs/kube-system-netpol.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: trusted-kube-system
  namespace: kube-system
  labels:
    app.kubernetes.io/managed-by: "Helm"
    meta.helm.sh/release-name: "argocd"
    meta.helm.sh/release-namespace: "argocd"
spec:
  endpointSelector: {}
  egress:
    - toEntities:
        - all
